# FirstDestination

./: .gitignore  README.md  pyproject.toml
config/: app_config.py
data/auth/: auth_config.py
data/inference_eg/: example_conv.py  example_conversation_inference.py
data/text_messages/: +12035358301.txt  +13522785027.txt  +16023359552.txt  +16023633820.txt  +16122937058.txt  +16238248291.txt  +16239800992.txt  +17164150284.txt  +17865463476.txt
data_processing/self_data/: +14808097002.txt  +15208405244.txt  +15305748849.txt  +15856233756.txt  +16023164708, +14085075648, +14802049766.txt  +16025663705.txt  +16026182639.txt  +16192012968.txt  +16613500794.txt  +16693007605.txt  +16788761302.txt  +18438104630.txt  +19283236315.txt  +19285817966.txt  +19522615400.txt
dialog/: format_dialog.py  generate_example_training_data.py  sample_data.csv
fine_tuning/: axolotl_fine_tune.ipynb  deploy_instance_on_aws.py  fine_tuning_with_qlora_on_chat_data.ipynb
fine_tuning/yaml_template/: llama2.yml  mistral.yml  wizzard.yml
openai_api/: connect_to_openai_api.py
service/dialog/: combine_data_and_push.py  format_chat_data.py  format_dialog.py  generate_example_training_data.py  prompt_config.py  prompt_template.py
service/format_text_messages/: example_conv.py  format_text_messages.py  text_config.py
service/hf_inference/: hugging_interface.py  inference_hf.py
service/hugging_face/: data_eg.py  inference_hf.py
service/sage_maker/: invoke_sagemaker_endpoint.py
service/sms_app/: expose_endpoint.py  (+3 more)
test_hugging_interface/: hugging_interface.py  try_stream.py
(+3 files in other folders)
